# Cmake_final_test

./: CMakeLists.txt  FileLoader.cpp  Jenkinsfile  StringHelper.cpp  day1.cpp  main.cpp
test/: CMakeLists.txt  day1-gtests.cpp
